Sistemato progetto per essere compilabile con java 11